增加交叉熵的注释

--- a/nll_loss.ipynb
+++ b/nll_loss.ipynb
@@ -121,7 +121,8 @@
    ],
    "source": [
     "# 现在假设我们的label=[2,0,1,0]\n",
-    "# 根据标签, 我们取sm_out[0][2], sm_out[1][0], sm_out[2][1], sm_out[3][0], 将他们去掉负号， 再求均值\n",
+    "# 根据标签, 我们取sm_out[0][2], sm_out[1][0], sm_out[2][1], sm_out[3][0], 将他们去掉负号， 再求均值。\n",
+    "# 其实就是对每个样本的交叉熵求均值\n",
     "out = (0.6525 + 2.4603 + 1.0522 + 0.6468) / 4\n",
     "out"
    ]
